# order_management/swagger.json
@@ -9,7 +9,7 @@
             "url": "https://opensource.org/licenses/MIT"
         }
     },
-    "host": "localhost:8080",
+    "host": "localhost:8083",
     "basePath": "/order",
     "paths": {
         "/{customerId}/{restaurant_Id}": {
@@ -47,7 +47,7 @@
                             "properties": {
                                 "restaurantData": {
                                     "type": "object",
-                                    "$ref": "#/definitions/Order"
+                                    "$ref": "#/definitions/OrderCreate"
                                 }
                             }
                         }
@@ -142,6 +142,23 @@
         }
     },
     "definitions": {
+        "OrderCreate": {
+            "type": "object",
+            "properties": {
+                "OrderItems": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "restaurant_Id": {
+                    "type": "integer"
+                },
+                "customerId": {
+                    "type": "integer"
+                }
+            }
+        },
         "Order": {
             "type": "object",
             "properties": {
@@ -161,9 +178,6 @@
                     "type": "integer"
                 },
                 "customerId": {
-                    "type": "integer"
-                },
-                "review_Id": {
                     "type": "integer"
                 }
             }
